--- a/client/src/styles/components.scss
+++ b/client/src/styles/components.scss
@@ -1,7 +1,47 @@
 #header-component {
-    background-color: red;
-    height: 20%;
+    background-color: #580ee3;
+    height: 45%;
     width: 100%;
     position: absolute;
     top: 0;
+    display: flex;
+    flex-direction: column;
+    #header-upper {
+        h1 {
+            font-size: 1.8rem;
+            font-weight: 700;
+        }
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 2rem;
+        height: 30%;
+        #header-upper-actions-buttons {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 1.5rem;
+        }
+    }
+    #header-lower {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0 2rem;
+        height: 20%;
+        h2 {
+            font-size: 2rem;
+            font-weight: 700;
+        }
+        #header-lower-right {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+        }
+    }
 }
