--- a/client/src/styles/components.scss
+++ b/client/src/styles/components.scss
@@ -2,7 +2,7 @@
     background-color: #580ee3;
     height: 45%;
     width: 100%;
-    position: absolute;
+    left: 0;
     top: 0;
     display: flex;
     flex-direction: column;
