--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 :root {
     width: 100%;
     height: 100%;
@@ -6,8 +8,8 @@
     line-height: 1.5;
     font-weight: 400;
 
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #dddddd;
+    color: $primary-white-text-color;
+    background-color: $background-color;
 
     font-synthesis: none;
     text-rendering: optimizeLegibility;
@@ -28,6 +30,6 @@ body {
 #root {
     width: 100%;
     height: 100%;
-    color: rgba(255, 255, 255, 0.87);
-    background-color: #dddddd;
+    color: $primary-white-text-color;
+    background-color: $background-color;
 }
