--- a/client/src/styles/pages.scss
+++ b/client/src/styles/pages.scss
@@ -1,5 +1,7 @@
+@import 'variables';
+
 #home-page {
-    background-color: #eaeaea;
+    background-color: $page-background-color;
     margin: auto;
     margin-top: -150px;
     z-index: 1000;
@@ -19,5 +21,5 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: rgba($color: #000000, $alpha: 0.8);
+    color: $primary-black-text-color;
 }
