--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -10,7 +10,7 @@
 $primary-purple-1: #883cff;
 $primary-purple-2: #701fff; // mui primary
 $primary-purple-3: #580ee3; // used for header
-$page-background-color: #eaeaea;
+$page-background-color: #ffffff;
 $primary-black-text-color: rgba(
     $color: #000000,
     $alpha: 0.8,
@@ -19,4 +19,4 @@ $primary-white-text-color: rgba(
     $color: #ffffff,
     $alpha: 0.8,
 );
-$background-color: #dddddd;
+$background-color: #fafafa;
