Added home page UI for new users

--- a/client/src/styles/components.scss
+++ b/client/src/styles/components.scss
@@ -2,6 +2,7 @@
 
 #header-component {
     background-color: $primary-purple-3;
+    color: $primary-white-text-color;
     height: 45%;
     width: 100%;
     left: 0;
