--- a/client/src/styles/pages.scss
+++ b/client/src/styles/pages.scss
@@ -3,15 +3,60 @@
 #home-page {
     background-color: $page-background-color;
     margin: auto;
-    margin-top: -150px;
     z-index: 1000;
+    margin-top: -150px;
     width: 80%;
-    height: 100vh;
+    height: 100%;
     border-radius: 20px 20px 0px 0px;
     -webkit-border-radius: 20px 20px 0px 0px;
     -moz-border-radius: 20px 20px 0px 0px;
     -ms-border-radius: 20px 20px 0px 0px;
     -o-border-radius: 20px 20px 0px 0px;
+    padding-bottom: 36px;
+
+    #steps-content-btns {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+        justify-content: center;
+    }
+
+    #new-user-bottom-container {
+        width: 100%;
+        height: fit-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .sliders-container {
+            width: fit-content;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 16px;
+            width: 70%;
+        }
+
+        #back-next-buttons {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 56px;
+            margin-top: 36px;
+        }
+    }
+
+    #sliders-row {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        width: 100%;
+        margin-top: 16px;
+        gap: 16px;
+        text-align: center;
+    }
 }
 
 #notfound-page {
